Offset point not clean

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
 
     function clearGraph() {
         pointsArray = [];
+        offsetPointsArray = [];
         d3.selectAll("circle").remove();
         d3.selectAll(".graphline").remove();
     }
